2008-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinRegistry.cs: Minor fixes.
	* Mono.Addins/AddinLocalizer.cs: Ouch, format arguments of GetString should
	  have been objects, not strings.
	* Mono.Addins.Description/NodeTypeAttribute.cs,
	  Mono.Addins.Description/ExtensionNodeType.cs,
	  Mono.Addins.Description/ExtensionPoint.cs,
	  Mono.Addins.Description/ConditionTypeDescription.cs,
	  Mono.Addins.Description/ExtensionNodeSet.cs: Implemented CopyFrom.
	* Mono.Addins.Description/AddinDescription.cs: Set global domain to
	  manifests read from xml files.
	* Mono.Addins.Description/ExtensionNodeDescription.cs: Remove insertbefore
	  and insertafter attributes when set to an empty string.
	* Mono.Addins.Database/AddinScanner.cs: Set a domain for files parsed with
	  ScanSingleFile.
	* Mono.Addins.Database/DefaultAssemblyReflector.cs: Fix bug in
	  GetCustomAttribute.

2008-02-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinDatabase.cs: Fix add-in scan issue. Avoid
	  updating the same add-in twice.

2008-02-06  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs, Mono.Addins.mdp, Mono.Addins/NodeAttributeAttribute.cs,
	  Mono.Addins/TypeExtensionPointAttribute.cs,
	  Mono.Addins/ExtensionPointAttribute.cs,
	  Mono.Addins/ExtensionNodeChildAttribute.cs, Makefile.am,
	  Mono.Addins.Database/IAssemblyReflector.cs,
	  Mono.Addins.Database/AddinScanResult.cs,
	  Mono.Addins.Database/AddinDatabase.cs,
	  Mono.Addins.Database/AddinScanner.cs,
	  Mono.Addins.Database/DefaultAssemblyReflector.cs: Added support for
	  pluggable add-in assembly reflectors. Implemented an add-in assembly
	  reflector based on Cecil.

2008-01-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/ExtensionTree.cs: Since Mono r93079, GetFields don't return
	  private fields from base classes. Fixed the code to work with the new
	  behavior.

2008-01-07  Lluis Sanchez Gual <lluis@novell.com> 
